Fixed layout issues with overscroll

--- a/myapp/src/app.css
+++ b/myapp/src/app.css
@@ -4,7 +4,6 @@
 
 html {
     background-color: #0d0d0d;
-   min-width: 650px;
 }
 .roboto-bold {
     font-family: "Roboto", system-ui;
